syntax = "proto3";
package grpc;
//import "google/protobuf/timestamp.proto";

option go_package = "github.com/user-server/grpc";


service GrpcUserService {
    rpc GetUser(Id) returns (User) {}
    rpc AddUser(User) returns (Err) {}
    rpc RemoveUser(Id) returns (Err) {}
    rpc UpdateUser(User) returns (Err) {}

}

message User {
    int32 id = 1;
    string name = 2;
    string login = 3;
    string password = 4;
}

message Id {
    int32 id = 1;
}

message Err {
    string err = 1;
}